Remove the horizontal overflow and fix a linear- gradient

--- a/styles.css
+++ b/styles.css
@@ -441,7 +441,7 @@ footer h2 {
 
 /* ### MEDIA QUERIES ### */
 
-@media (min-width: 70em) {
+@media (min-width: 80em) {
   h3 {
     max-width: unset;
     margin-inline: unset;
@@ -485,6 +485,7 @@ footer h2 {
   .desktop-nav {
     display: block;
     flex-grow: 1;
+    font-weight: var(--fw-600);
   }
 
   .desktop-nav > ul {
@@ -554,6 +555,8 @@ footer h2 {
     text-align: start;
     padding: 6rem 0;
     position: relative;
+    margin: 4rem 0 6rem;
+    background: linear-gradient(to right, var(--purple-950), var(--purple-900));
   }
 
   .state__grid {
@@ -601,6 +604,8 @@ footer h2 {
   .design-section {
     text-align: start;
     position: relative;
+    overflow: hidden;
+    padding-block: 12rem;
   }
 
   .design-section h2 {
